Z-index solved

--- a/main.css
+++ b/main.css
@@ -12,4 +12,5 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 2;
 }
